# CTEx-Rs

./: .gitignore  CHANGELOG.md  CHANGELOG.ru.md  Cargo.toml  LICENSE  README.md  README.ru.md
ccxt_service/: .gitignore  README.md  pyproject.toml  start.sh
ccxt_service/backend/: backend.py
ccxt_service/ccxt_requests/: requests.py
ccxt_service/utils/: cache.py  crypto.py  errors.py
config/: config.yaml  model.yaml
config/config/: config.yaml  model.yaml
docs/en/: architecture.md  config.md  database.md  history.md  model_config.md
docs/ru/: architecture.md  config.md  database.md  history.md  model_config.md
src/: main.rs
src/backend/: README.md  app.rs  commands.rs  mod.rs  structure.rs  stucture.rs
src/data/: data_interfaces.rs  mod.rs
src/data/process/: data_collection.rs  features.rs  mod.rs  target.rs  volatility.rs
src/data/process/features/: auxiliary.rs  basic.rs  mod.rs
src/data/requests/: atr.rs  mod.rs  time.rs  time_req.rs
src/data/requests/ccxt/: account.rs  binance.rs  client.rs  mod.rs
src/data/requests/database/: mod.rs  (+3 more)
src/engine/: mod.rs
src/engine/actors/: chain.rs  counter.rs  mod.rs  model.rs  prediction.rs  service.rs
src/engine/cycles/: cycle_traits.rs  manager.rs  mod.rs  old_manager.rs  traits.rs
src/engine/state/: chain.rs  counters.rs  mod.rs
src/engine/utils/: colors.rs  config_types.rs  load_config.rs  log.rs  mod.rs  parse.rs  processor.rs
src/models/: decisiontree.rs  ensemble.rs  extratrees.rs  knn.rs  linear.rs  metrics.rs  mod.rs  model.py  model.rs  randomforest.rs  ridge.rs  tests.rs  xgboost.rs
(+11 files in other folders)
