[package]
name = "CTEx-Rs"
version = "0.1.0"
edition = "2024"

[dependencies]
binance = { git = "https://github.com/ccxt/binance-rs.git" }
chrono = "0.4"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
dotenvy = "0.15"
smartcore = "0.4.5"
anyhow = "1.0"
axum = "0.8"
