[package]
name = "CTEx-Rs"
version = "2.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dotenvy = "0.15"
smartcore = "0.4.5"
anyhow = "1.0"
axum = "0.8"
rayon = "1.7"
reqwest = { version = "0.12", features = ["json"] }
indicatif = "0.17"
async-trait = "0.1"
